chlav 6 ending